# MomentPlus

./: .gitignore  1.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _CMakeLists.txt  a.out  cmake_install.cmake  datefwd.h  make.txt  tdstuf.exe.stackdump
src/: CMakeLists.txt  DateTest.cpp  Makefile  cmake_install.cmake  date.cpp  date.h  datefwd.h  datestuff.cpp  datestuff.h  fulldate.cpp  fulldate.h  xcept.h  year.cpp  year.h  ymonth.cpp  ymonth.h
src/lib/: libMomentPlus.so.1
test/: CMakeLists.txt  Makefile  cmake_install.cmake  tdate.cpp  tdstuf.cpp
